kubernetes/gitops/proxmox-ssl/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-svc
  namespace: proxmox-ssl
subsets:
- addresses:
  - ip: 10.11.12.253
  ports:
  - port: 8006
