kubernetes/gitops/proxmox-ssl/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-route
  namespace: proxmox-ssl
spec:
  entryPoints:
    - proxmox 
  routes:
    - match: PathPrefix(`/`) 
      kind: Rule
      services:
        - name: proxmox-svc
          port: 443
          scheme: https
          serversTransport: skip-tls-proxmox
  tls:
    secretName: aleixolab-tls
